payment and some changes